ARROW-1435: [Python] Properly handle time zone metadata in Parquet round trips

cc @jreback. Various bugs fixed here, but the bottom line is that this enables tz-aware pandas data to be faithfully round-tripped to Parquet format. We will need to implement compatibility tests in pandas for this, too

example DataFrame that could not be properly written before:

```python
s = pd.Series([datetime.datetime(2017, 9, 6)])
s = s.dt.tz_localize('utc')
s.index = s
# Both a column and an index to hit both use cases
df = pd.DataFrame({'tz_aware': s}, index=s)
```

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #1054 from wesm/ARROW-1435 and squashes the following commits:

6519945f [Wes McKinney] Add test for a non-UTC time zone too
20bb6dc1 [Wes McKinney] Get round trip for tz-aware index to Parquet working. Handle time zones in Column.to_pandas
f92abaa7 [Wes McKinney] Fix, initial test passing
6701cf0e [Wes McKinney] Initial cut at fixing tz aware columns to/from Parquet